--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <!-- Header -->
 
-    <!-- Hero -->
+    <!-- Hero ------>
     <section class="hero">
         <div class="container">
             <div class="main">
@@ -48,7 +48,7 @@
             </div>
         </div>
     </section>
-    <!-- Hero -->
+    <!-- Hero ----->
     <!-- Mighty-Work -->
     <section class="mighty-work">
         <div class="container">
@@ -189,7 +189,7 @@
         </div>
     </section>
 
-    <!-- Investing Insights -->
+    <!--    Investing Insights      -->
 
     <!-- solution -->
     <section class="solution">
@@ -321,7 +321,7 @@
                     </div>
                     <div class="col-lg-6 col-12 d-none d-lg-block">
                         <div class="img h-100">
-                            <img src="img/Tim.png" class="img-fluid" alt="tim" />
+                            <img src="img/Tim.png" class="img-fluid " alt="tim" />
                         </div>
                     </div>
                 </div>
@@ -341,7 +341,7 @@
                                 <h2  class="heading">Our Partners and Affiliations</h2>
                            
                                 <p>
-                                    <img src="img/ARNlogo.png" class="img-fluid" alt="arnlogo">
+                                    <img src="img/ARNlogo.png" class="img-fluid arnlogo" alt="arnlogo">
                                     <img src="img/BSElogo.png" class="img-fluid "alt="bselogo">
                                 </p>
                             </div>
@@ -390,17 +390,17 @@
                                         </li>
                                         <li>
                                             <a href="#">
-                                                <img src="img/fb.png" class="img-fluid"/>
+                                                <img src="img/in.png" class="img-fluid"/>
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#">
-                                                <img src="img/fb.png" class="img-fluid"/>
+                                                <img src="img/twitter.png" class="img-fluid"/>
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#">
-                                                <img src="img/fb.png" class="img-fluid"/>
+                                                <img src="img/whatup.png" class="img-fluid"/>
                                             </a>
                                         </li>
                                     </ul>
